--- a/locales/en.yml
+++ b/locales/en.yml
@@ -391,3 +391,7 @@ tools:
   text-to-binary:
     title: Text to ASCII binary
     description: Convert text to its ASCII binary representation and vice-versa.
+
+  regex:
+    title: Regex Tools
+    description: Regex Tools, provide common script, test and verify function.
