--- a/locales/zh.yml
+++ b/locales/zh.yml
@@ -387,3 +387,7 @@ tools:
   text-to-binary:
     title: 文本到 ASCII 二进制
     description: 将文本转换为其 ASCII 二进制表示形式，反之亦然。
+
+  regex:
+    title: 正则表达式工具
+    description: 正则表达式工具，提供常用的正则，并支持在线测试，验证。  
