增加小游戏模块

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -91,6 +91,8 @@ tools:
     measurement: Messung
     text: Text
     data: Daten
+    game: Spiel
+
   password-strength-analyser:
     title: Passwortstärken-Analysator
     description: >-
